Update path image style.css

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,7 +12,7 @@
     width: auto;
     height: 364px;
     /* border: 1px solid red; */
-    background-image: url(src/images/IMAGEM-fundo-BLOG.webp);
+    background-image: url(../images/IMAGEM-fundo-BLOG.webp);
 
 }
 
