--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -10,6 +10,10 @@ html, body {
     height: 100%;
 }
 
+body{
+    background-color: rgb(244, 244, 244);
+}
+
 a{
     text-decoration: none;
     color: rgb(43, 41, 41);
@@ -20,9 +24,11 @@ a:hover{
     text-decoration: underline;
 }
 
-body{
+/*  define largura máxima e da espaçamento entre os elementos verticalmente */
+.content{
     max-width: 1024px;
-    background-color: rgb(244, 244, 244);
+    width: 100%;
+    height: 100%;
     
     display: flex;
     flex-direction: column;
@@ -30,10 +36,12 @@ body{
     justify-content: space-between;
 }
 
-html{
+/* centraliza o conteudo no meio da pagina */
+.center-content{
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
-    
 }
 
 .text-apresentation{
