--- a/src/css/dicas_e_historias.css
+++ b/src/css/dicas_e_historias.css
@@ -20,7 +20,7 @@
 }
 
 
-.content {
+.main-content {
     /* border: 1px solid red; */
     margin-bottom: 30px;
     padding: 15px;
@@ -29,19 +29,18 @@
 }
 
 
-.content h2 {
+.main-content h2 {
     color: rgb(0, 102, 204);
     margin-bottom :10px;
 }
 
 
-
-.content p {
+.main-content p {
     margin-bottom:10px;
     color: rgb(85, 85, 85);
 }
 
-.content a {
+.main-content a {
     display: inline-block;
     margin-top: 10px;
     color: rgb(0, 102, 204);
