--- a/src/css/pesquisa.css
+++ b/src/css/pesquisa.css
@@ -11,7 +11,18 @@
 /* tabela sobre os postos */
 .infos , th, td{
     padding-top: 30px;
-    font-size: 80%;
+    font-size: 90%;
+}
+
+.infos{
+    max-width: 500px;
+    height: auto;
+    cursor: pointer;
+    text-align: center;
+}
+
+#tabela-dinamica td, th{
+    height: 30px;   
 }
 
 /* contem o titulo e os graficos */
@@ -64,7 +75,13 @@ th, td {
 @media(max-width:700px) {
     .tabela-content{
         width: auto;
-        font-size: 70%;
+        font-size: 80%;
+    }
+    
+    .infos {
+        font-size: 80%;
+        margin-left: 5px;
+        margin-right: 5px;
     }
 
     th, td {
@@ -74,6 +91,7 @@ th, td {
 
     #apresentacao{
         padding-left: 10px;
+        height: auto;
     }
 
 }
