--- a/src/css/pesquisa.css
+++ b/src/css/pesquisa.css
@@ -21,8 +21,34 @@
     text-align: center;
 }
 
+
 #tabela-dinamica td, th{
     height: 30px;   
+}
+
+/* circulos que ficam abaixo da tabela de infos/tabela dinamica */
+.circle{
+    width: 15px;
+    height: 15px;
+    border: 2px solid #0255fd;
+    border-radius: 50%;
+}
+/*circulo selecionado*/
+.selected{
+    width: 9px;
+    height: 9px;
+    background-color: #0255fd;
+    border-radius: 50%;
+    margin-top: 3px;
+    margin-left: 3px;
+}
+
+/* div que ficam os circulos*/
+#selecao{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 20px;
 }
 
 /* contem o titulo e os graficos */
